# Copyright 2024, Toyota Motor Corporation
#
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//rules:cc_library_with_variants.bzl", "cc_library_with_variants")

filegroup(
    name = "hdrs",
    srcs = [
        "byte_swap.hpp",
        "endian.hpp",
    ],
)

cc_library_with_variants(
    name = "internal",
    hdrs = [":hdrs"],
    visibility = [
        ":__subpackages__",
        "//arene/base:__pkg__",
    ],
    deps = [
        "//arene/base:algorithm",
        "//arene/base:byte",
        "//arene/base:constraints",
        "//arene/base:contracts",
        "//arene/base:span",
        "//arene/base:type_traits",
        "//arene/base/compiler_support",
        "//arene/base/endian/detail",
        "//arene/base/stdlib_choice:cstddef",
        "//arene/base/stdlib_choice:cstdint",
        "//arene/base/stdlib_choice:enable_if",
        "//arene/base/stdlib_choice:ignore",
        "//arene/base/stdlib_choice:is_arithmetic",
        "//arene/base/stdlib_choice:is_enum",
        "//arene/base/stdlib_choice:is_floating_point",
        "//arene/base/stdlib_choice:is_same",
        "//arene/base/stdlib_choice:underlying_type",
    ],
)

filegroup(
    name = "package",
    srcs = [
        "BUILD.bazel",
        ":hdrs",
        "//arene/base/endian/detail:package",
    ],
    visibility = ["//arene/base:__pkg__"],
)
