# Copyright 2024, Toyota Motor Corporation
#
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//rules:cc_library_with_variants.bzl", "cc_library_with_variants")

filegroup(
    name = "make_index_sequence_repeat_n_hdrs",
    srcs = ["make_index_sequence_repeat_n.hpp"],
)

cc_library_with_variants(
    name = "make_index_sequence_repeat_n",
    hdrs = [":make_index_sequence_repeat_n_hdrs"],
    visibility = [
        "//arene/base:__subpackages__",
        "//stdlib:__subpackages__",
    ],
    deps = [
        "//arene/base/stdlib_choice:cstddef",
        "//arene/base/stdlib_choice:integer_sequence",
        "//arene/base/stdlib_choice:integral_constant",
        "//arene/base/type_manipulation:repeat_type",
    ],
)

filegroup(
    name = "hdrs",
    srcs = [
        "integer_sequence_ops.hpp",
        "make_integer_sequence.hpp",
        "sequential_values.hpp",
    ],
)

cc_library_with_variants(
    name = "internal",
    hdrs = [":hdrs"],
    visibility = [
        ":__subpackages__",
        "//arene/base:__pkg__",
    ],
    deps = [
        ":make_index_sequence_repeat_n",
        "//arene/base:array",
        "//arene/base:constraints",
        "//arene/base/stdlib_choice:cstddef",
        "//arene/base/stdlib_choice:enable_if",
        "//arene/base/stdlib_choice:initializer_list",
        "//arene/base/stdlib_choice:integer_sequence",
        "//arene/base/stdlib_choice:integral_constant",
        "//arene/base/type_traits:conditional",
    ],
)

filegroup(
    name = "package",
    srcs = [
        "BUILD.bazel",
        ":hdrs",
        ":make_index_sequence_repeat_n_hdrs",
    ],
    visibility = ["//arene/base:__pkg__"],
)
